# Flint

./: CONTRIBUTING.md  README.md  build_error.txt  proper_error.txt  pyproject.toml  test_backends.py  test_code.py
.github/workflows/: ci.yml  test.yml
desktop/app/: history.py  main.py  ui_main.py  worker.py
distribution/: build_desktop.py
docs/: architecture.md  cli_usage.md  desktop_app.md  installation.md  security.md
memory/: vector_store.py
src/flint/: __init__.py
src/flint/backends/: __init__.py  base.py  llamacpp.py  lmstudio.py  ollama.py
src/flint/cli/: bench.py  code.py  git.py  main.py  memory.py  model.py  prompt.py  serve.py
src/flint/core/: chain.py  config.py  model.py  prompt.py
tests/test_core/: test_basic.py  test_prompt.py
