[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flint-ai"
version = "0.1.0"
description = "The missing layer between raw local AI models and production-ready apps."
readme = "README.md"
authors = [
    { name = "Flint Community", email = "hello@example.com" }
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.2",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "pre-commit"
]
desktop = [
    "PySide6>=6.5.0",
]

[project.scripts]
flint = "flint.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "src/flint"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
